[package]
name = "cfs"
version = "0.1.0"
edition = "2018"
rust-version = "1.57.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
bytes = "1.1.0"
config = { version = "0.13", features = ["toml"] }
tokio = {version = "1.18.0", features = ["full"]}
tonic = {version = "0.6.2", features = ["tls"]}
bazel-remote-apis-rs = { git = "https://github.com/leakingtapan/bazel-remote-apis-rs", branch = "main" }
fuser = {version = "0.9.1", features = ["abi-7-28"]}
clap = {version = "4.4", features = ["cargo", "derive"]}
libc = "0.2.112"
prost = "0.9.0"
sha2 = "0.10.1"
uuid = { version = "0.8.2", features = ["v4"]  }
futures-util = "0.3.19"
walkdir = "2.3.2"
rayon = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = { version = "0.7.2", features = ["codec"] }
futures = "0.3.21"

[[bin]]
name = "cfsd"
path = "src/daemon/main.rs"

[[bin]]
name = "fsx"
path = "src/fsx/main.rs"
